{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 413,
  "lineage": "cb75a64e-3ad1-af98-1281-b7165e2613a1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "inst1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00c03f7f7f2ec15c3",
            "arn": "arn:aws:ec2:us-east-2:700634832986:instance/i-05bc76c12e1adb676",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-05bc76c12e1adb676",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keypair",
            "monitoring": false,
            "primary_network_interface_id": "eni-03df5640701d4c74c",
            "private_dns": "ip-10-0-0-95.us-east-2.compute.internal",
            "private_ip": "10.0.0.95",
            "public_dns": "ec2-13-59-249-132.us-east-2.compute.amazonaws.com",
            "public_ip": "13.59.249.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a202c3ddd462a204",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-07aa2aa9a3c146caa",
            "tags": {
              "Name": "Application-Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0489754d88010b512"
            ]
          },
          "depends_on": [
            "aws_key_pair.default",
            "aws_security_group.sg",
            "aws_subnet.pub_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-07a4da747e8af9e57",
            "owner_id": "700634832986",
            "tags": {
              "Name": "IGW-TERRAFORM"
            },
            "vpc_id": "vpc-09fdaee8b77b68f42"
          },
          "depends_on": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f183f8153b5f57c3",
            "owner_id": "700634832986",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07a4da747e8af9e57",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route-TERRAFORM"
            },
            "vpc_id": "vpc-09fdaee8b77b68f42"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05041291b18e432a8",
            "route_table_id": "rtb-0f183f8153b5f57c3",
            "subnet_id": "subnet-07aa2aa9a3c146caa"
          },
          "depends_on": [
            "aws_route_table.rtb",
            "aws_subnet.pub_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:700634832986:security-group/sg-0489754d88010b512",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0489754d88010b512",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG-TERRAFORM",
            "name_prefix": null,
            "owner_id": "700634832986",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-TERRAFORM"
            },
            "timeouts": null,
            "vpc_id": "vpc-09fdaee8b77b68f42"
          },
          "depends_on": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:700634832986:subnet/subnet-099ad438d7e6f4a24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-099ad438d7e6f4a24",
            "map_public_ip_on_launch": false,
            "owner_id": "700634832986",
            "tags": {
              "Name": "SubNet-B-TERRAFORM-PRIVATE"
            },
            "vpc_id": "vpc-09fdaee8b77b68f42"
          },
          "depends_on": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:700634832986:subnet/subnet-07aa2aa9a3c146caa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-07aa2aa9a3c146caa",
            "map_public_ip_on_launch": true,
            "owner_id": "700634832986",
            "tags": {
              "Name": "SubNet-A-TERRAFORM"
            },
            "vpc_id": "vpc-09fdaee8b77b68f42"
          },
          "depends_on": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:700634832986:vpc/vpc-09fdaee8b77b68f42",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08ed20255008f1b00",
            "default_route_table_id": "rtb-0f7d6ab623015d68f",
            "default_security_group_id": "sg-085302a6b3bd5220d",
            "dhcp_options_id": "dopt-86f805ed",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09fdaee8b77b68f42",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f7d6ab623015d68f",
            "owner_id": "700634832986",
            "tags": {
              "Name": "VPC-TERRAFORM"
            }
          }
        }
      ]
    }
  ]
}